# mcp-server

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_DOCUMENTATION.md  biome.json  commit-changes.sh  eslint.config.js  flake.nix  migrate-installer.sh  ollama-test.sh  package.json  paper_prompt_driven_development.md  pyproject.toml  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  mlc_config.json
docs/: README.md  methodology-breakthrough-note.md  readme.md
docs/agent/: inst.architecture.yaml  inst.comprehensive.yaml  inst.design.yaml  inst.objective.yaml  inst.stage2.design.yaml
docs/architecture/: claude-code-mcp-architecture.md  development-environment.md  mcp-integration-strategy.md  sagent-architecture.md  strategic-roadmap.md  time-series-platform-extension.md
docs/design/: classes.phase.1.md  component.phase.1.md  container.phase.1.md  context.phase.1.md  flow.phase.1.md  phase.1.md
docs/diary/: README.md  new_entry.sh
docs/diary/2025/06/: 2025.06.23.md  2025.06.24.md
docs/guides/: design.prompt.md  design.stage.md  impl.prompt.md  implementation.stage.md  objective.prompt.md  objective.stage.md  process.md
docs/impl/: README.md  comprehensive_updates_summary.md  config.py.md  context.py.md  documentation_verification_checklist.md  impl.strategy.md  interface.py.md  interface_audit_report.md  llm.py.md  models.py.md  orchestration.py.md  package.phase.1.md  package_research_implementation_updates.md  packages.analysis.md  plugin.py.md  storage.py.md
docs/impl/py/: config.py.md  context.py.md  interface.py.md  orchestration.py.md  sessions.py.md  storage.py.md  tools.py.md
docs/impl/py/plugin/: orchestrator.md  registry.md
docs/notes/: methodology.md
docs/objective/: README.md  phase.1.md  phase.2.md  phase.3.md  phase.4.md
docs/package/: py.md
docs/qi/core/nl/: qi.v4.class.contracts.md  qi.v4.component.contracts.md
docs/research/: package_research_comprehensive.md
docs/setup/: README.md  setup.md  uv-ollama-nix-integration.md  vscode-submodule-setup.md
docs/specs/: config.md
docs/technical/: models.md  ollama-gpu-optimization.md
docs/tutorials/: claude-code-sdk-integration-tutorial.md  context-management-mcp-tutorial.md
dp/: .env.example  PROJECT_KNOWLEDGE.md  README.md  docker-compose.yml  package.json  tsconfig.json
dp/config/: redpanda-console.yml
dp/database/: init-clickhouse.sql  init-timescale.sql
dp/src/: index.ts
dp/src/agents/: market-monitoring-agent.ts
dp/src/config/: index.ts
dp/src/database/: index.ts
dp/src/streaming/: crypto-streamer.ts
dp/src/types/: index.ts
env/: README.md  mirrors.sh  setup.sh
mcp_server/: README.md
python/: pyproject.toml
scripts/: verify_all.sh  verify_cross_references.sh  verify_interface_consistency.sh  verify_language_agnostic.sh  verify_package_consistency.sh
tests/: comprehensive.test.ts  mathforge.test.ts  setup.ts
