[project]
name = "mcp-server"
version = "1.0.0"
description = "MCP server with FastMCP + Chroma + RAG"
authors = [{name = "Zhifeng Zhang", email = "your-email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.5.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-embeddings-ollama>=0.1.0",
    "llama-index-llms-ollama>=0.1.0",
    "httpx>=0.28.1",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "onnxruntime>=1.16.0",
    "fastmcp>=2.8.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]

[tool.coverage.run]
branch = true
source = ["mcp_server"]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'./coverage/html' --cov-report xml:'./coverage/coverage.xml' --junitxml='./reports/unittests/junit.xml' --html='./reports/unittests/html/index.html'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
